compiles now, testing display

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ set(SOURCE_FILES
     "registration.cu"
     "registration.h"
     "registrationTools.h"
+    "pointcloud.cpp"
+    "pointcloud.h"
     )
 
 cuda_add_library(src
