--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,8 @@ set(SOURCE_FILES
     "registrationTools.h"
     "pointcloud.cpp"
     "pointcloud.h"
+    "kdtree.cpp"
+    "kdtree.h"
     )
 
 cuda_add_library(src
